--- a/locale/lang/es/LC_MESSAGES/emulationstation2.po
+++ b/locale/lang/es/LC_MESSAGES/emulationstation2.po
@@ -13,91 +13,91 @@ msgstr ""
 msgid "MAIN MENU"
 msgstr "MENU PRINCIPAL"
 msgid "YES"
-msgstr "SI"
+msgstr "SÍ"
 msgid "NO"
 msgstr "NO"
 
 #: es-app/src/views/gamelist/DetailedGameListView.cpp
 msgid "Rating: "
-msgstr "Nota : "
+msgstr "Calificación: "
 msgid "Released: "
-msgstr "Liberado : "
+msgstr "Publicado: "
 msgid "Developer: "
-msgstr "Desarrollador : "
+msgstr "Desarrollador: "
 msgid "Publisher: "
-msgstr "Publicado : "
+msgstr "Editora: "
 msgid "Genre: "
-msgstr "Genero : "
+msgstr "Género: "
 msgid "Players: "
-msgstr "Jugadores : "
+msgstr "Jugadores: "
 msgid "Last played: "
-msgstr "Ultimo jugador : "
+msgstr "Últ. partida: "
 msgid "Times played: "
-msgstr "Num. partidas : "
+msgstr "Num. partidas: "
 
 #: es-app/src/MetaData.cpp
 msgid "enter game name"
-msgstr "Introduce nombre del juego"
+msgstr "Escribe nombre del juego"
 
 
 msgid "NAME" 
 msgstr "NOMBRE"
 msgid "ENTER DESCRIPTION"
-msgstr "DESCRIPCION"
+msgstr "ESCRIBE DESCRIPCIÓN"
 msgid "ENTER PATH TO IMAGE"
-msgstr "RUTA DE LAS IMAGENES"
+msgstr "RUTA DE LA IMAGEN"
 msgid "THUMBNAIL"
-msgstr "MINIATURAS"
+msgstr "MINIATURA"
 msgid "ENTER PATH TO THUMBNAIL"
-msgstr "RUTA DE LAS MINIATURAS"
+msgstr "RUTA DE LA MINIATURA"
 msgid "RATING"
-msgstr "NOTA"
+msgstr "CALIFICACIÓN"
 msgid "ENTER SCORE"
-msgstr "INTRODUCE RECORD"
+msgstr "ESCRIBE PUNTUACIÓN"
 msgid "RELEASE DATE"
-msgstr "FECHA LIBERACION"
+msgstr "FECHA DE PUBLICACIÓN"
 msgid "ENTER RELEASE DATE"
-msgstr "INTRODUCE FECHA LIBERACION"
+msgstr "ESCRIBE FECHA DE PUBLICACIÓN"
 msgid "DEVELOPER"
 msgstr "DESARROLLADOR"
 msgid "ENTER GAME DEVELOPER"
-msgstr "INTRODUCE DESARROLLADOR DEL JUEGO"
+msgstr "ESCRIBE DESARROLLADOR DEL JUEGO"
 msgid "PUBLISHER"
 msgstr "EDITORA"
 msgid "ENTER GAME PUBLISHER"
-msgstr "INTRODUCE EDITORA DEL JUEGO"
+msgstr "ESCRIBE EDITORA DEL JUEGO"
 msgid "GENRE"
-msgstr "GENERO"
+msgstr "GÉNERO"
 msgid "ENTER GAME GENRE"
-msgstr "INTRODUCE GENERO DEL JUEGO"
+msgstr "ESCRIBE GÉNERO DEL JUEGO"
 msgid "PLAYERS"
 msgstr "JUGADORES"
 msgid "ENTER NUMBER OF PLAYERS"
-msgstr "INTRODUCE NUMERO DE JUGADORES"
+msgstr "ESCRIBE NÚMERO DE JUGADORES"
 msgid "PLAY COUNT"
 msgstr "PARTIDAS JUGADAS"
 msgid "ENTER NUMBER OF TIMES PLAYED"
-msgstr "INTRODUCE NUM PARTIDAS JUGADAS"
+msgstr "ESCRIBE NÚM. PARTIDAS JUGADAS"
 
 #: es-app/src/guis/GuiMenu.cpp
 msgid "SCRAPE FROM"
 msgstr "SCRAPPER DESDE"
 msgid "SCRAPE RATINGS"
-msgstr "NOTAS DEL SCRAPPER"
+msgstr "CALIFICACIÓN DEL SCRAPPER"
 msgid "SOUND SETTINGS"
 msgstr "AJUSTES DEL SONIDO"
 msgid "SYSTEM VOLUME"
-msgstr "VOLUMEN DEL SISTEMA"
+msgstr "VOLUMEN"
 msgid "ENABLE SOUNDS"
 msgstr "ACTIVAR SONIDOS"
 msgid "UI SETTINGS"
-msgstr "OPCIONES DE LA INTERFACE"
+msgstr "OPCIONES DEL INTERFAZ"
 msgid "SCREENSAVER AFTER"
-msgstr "SALVAPANTALLA TRAS"
+msgstr "SALVAPANTALLA DESPUES DE"
 msgid "TRANSITION STYLE"
-msgstr "ESTILO DE LAS TRANSICIONES"
+msgstr "ESTILO DE TRANSICIÓN"
 msgid "SCREENSAVER BEHAVIOR"
-msgstr "COMPORTAMIENTO DEL SALVAPANTALLAS"
+msgstr "CONFIGURACIÓN DEL SALVAPANTALLAS"
 msgid "SHOW FRAMERATE"
 msgstr "MOSTRAR FRAMERATE"
 msgid "ON-SCREEN HELP"
@@ -107,19 +107,19 @@ msgstr "SELECION RAPIDA DEL SISTEMA"
 msgid "THEME SET"
 msgstr "TEMAS"
 msgid "CONFIGURE INPUT"
-msgstr "CONFIGURAR LOS MANDOS"
+msgstr "CONFIGURAR CONTROLES"
 msgid "QUIT"
 msgstr "SALIR"
 msgid "REALLY RESTART?"
-msgstr "DESEA REINICIAR ?"
+msgstr "¿QUIERES REINICIAR?"
 msgid "RESTART SYSTEM"
 msgstr "REINICIAR SISTEMA"
 msgid "REALLY SHUTDOWN?"
-msgstr "DESEA APAGAR ?"
+msgstr "¿QUIERES APAGAR EL SISTEMA?"
 msgid "SHUTDOWN SYSTEM"
 msgstr "APAGANDO"
 msgid "REALLY QUIT?"
-msgstr "DESEA SALIR ?"
+msgstr "¿QUIERES SALIR?"
 msgid "QUIT EMULATIONSTATION"
 msgstr "SALIR DE EMULATIONSTATION"
 
@@ -128,7 +128,7 @@ msgstr "SALIR DE EMULATIONSTATION"
 msgid "SCRAPE NOW"
 msgstr "SCRAPE AHORA"
 msgid "USER DECIDES ON CONFLICTS"
-msgstr "USUARIO DECIDE LOS CONFLICTOS"
+msgstr "EL USUARIO DECIDE LOS CONFLICTOS"
 msgid "SYSTEMS"
 msgstr "SISTEMA"
 msgid "FILTER"
@@ -157,23 +157,23 @@ msgstr "cerrar"
 msgid "select"
 msgstr "seleccionar"
 msgid "choose"
-msgstr "elige"
+msgstr "elegir"
 msgid "back"
-msgstr "volver"
+msgstr "atrás"
 msgid "CLOSE"
 msgstr "CERRAR"
 msgid "SELECT"
 msgstr "SELECCIONAR"
 msgid "CHOOSE"
-msgstr "ELIGE"
+msgstr "ELEGIR"
 msgid "BACK"
 msgstr "ATRAS"
 msgid "LAUNCH"
-msgstr "LANZAR"
+msgstr "JUGAR"
 msgid "SYSTEM"
 msgstr "SISTEMA"
 msgid "INPUT"
-msgstr "ENTRADA"
+msgstr "CONTROLES"
 msgid "SKIP"
 msgstr "OMITIR"
 msgid "CHANGE"
@@ -193,11 +193,11 @@ msgstr " JUEGOS DISPONIBLES"
 
 #: es-app/src/guis/GuiGamelistOptions.cpp
 msgid "JUMP TO LETTER"
-msgstr "SALTAR A UNA LETRA"
+msgstr "SALTAR A LETRA"
 msgid "SORT GAMES BY"
 msgstr "ORDENAR JUEGOS POR"
 msgid "EDIT THIS GAME'S METADATA"
-msgstr "EDITAR LOS METADATAS DE ESTE JUEGO"
+msgstr "EDITAR LOS METADATOS DE ESTE JUEGO"
 
 
 #: es-app/src/guis/GuiMetaDataEd.cpp
@@ -213,11 +213,11 @@ msgstr "BIENVENIDO"
 msgid "NO GAMEPADS DETECTED"
 msgstr "NO SE DETECTARON MANDOS"
 msgid "HOLD A BUTTON ON YOUR DEVICE TO CONFIGURE IT."
-msgstr "MANTEN PULSADO UN BOTON EN TU MANDO PARA CONFIGURARLO"
+msgstr "MANTEN PULSADO UN BOTON EN TU DISPOSITIVO PARA CONFIGURARLO."
 msgid "PRESS F4 TO QUIT AT ANY TIME."
-msgstr "PULSA F4 PARA SALIR EN CUALQUIER MOMENTO"
+msgstr "PULSA F4 PARA SALIR EN CUALQUIER MOMENTO."
 msgid "PRESS ESC TO CANCEL."
-msgstr "PULSA ESC PARA CANCELAR"
+msgstr "PULSA ESC PARA CANCELAR."
 
 #: es-core/src/guis/GuiInputConfig.cpp
 msgid "CONFIGURING"
@@ -236,51 +236,51 @@ msgid "PAGE DOWN"
 msgstr "R1 (NUEVA PAGINA)"
 
 msgid "SAVE CHANGES?"
-msgstr "GUARDAR CAMBIOS ?"
+msgstr "¿GUARDAR CAMBIOS?"
 
 #: es-app/src/guis/GuiUpdate.cpp
 
 msgid "WORKING..."
-msgstr "PROCESANDO..."
+msgstr "CARGANDO..."
 msgid "UPDATE"
-msgstr "ACTUALIZANDO"
+msgstr "ACTUALIZACIÓN"
 msgid "REALLY UPDATE?"
-msgstr "DESEA ACTUALIZAR ?"
+msgstr "¿QUIERES ACTUALIZAR?"
 msgid "NETWORK CONNECTION NEEDED"
 msgstr "ES NECESARIO CONEXION A LA RED"
 msgid "UPDATE OK, THE SYSTEM WILL NOW REBOOT"
-msgstr "ACTUALIZACION OK, EL SISTEMA SE REINICIARA AHORA"
+msgstr "ACTUALIZACION CORRECTA, SE VA A REINICIAR EL SISTEMA"
 msgid "UPDATE FAILED, THE SYSTEM WILL NOW REBOOT"
-msgstr "FALLO EN LA ACTUALIZACION, EL SISTEMA SE REINICIARA AHORA"
+msgstr "ERROR EN LA ACTUALIZACION, SE VA A REINICIAR EL SISTEMA"
 
 
 #GUIMENU
 msgid "CONFIGURE A CONTROLLER"
-msgstr "CONFIGURAR EL CONTROLADOR"
+msgstr "CONFIGURAR UN MANDO"
 msgid "INPUT P1"
-msgstr "CONTROLADOR J1"
+msgstr "MANDO J1"
 msgid "INPUT P2"
-msgstr "CONTROLADOR J2"
+msgstr "MANDO J2"
 msgid "INPUT P3"
-msgstr "CONTROLADOR J3"
+msgstr "MANDO J3"
 msgid "INPUT P4"
-msgstr "CONTROLADOR J4"
+msgstr "MANDO J4"
 
 msgid "NOGAMEERRORMESSAGE"
-msgstr "NO SE ENCONTRAROS JUEGOS EN EL SISTEMA!\nAGREGUE LOS JUEGOS SIGUIENDO LAS INSTRUCCIONES.\n\nVISITA RETROBOX.FR PARA MAS INFORMACION"
+msgstr "¡NO SE ENCONTRARON JUEGOS EN EL SISTEMA!\nAÑADE LOS JUEGOS SIGUIENDO LAS INSTRUCCIONES.\n\nVISITA RETROBOX.FR PARA OBTENER MÁS INFORMACIÓN."
 
 msgid "LANGUAGE"
 msgstr "IDIOMA"
 
 msgid "THE SYSTEM WILL NOW REBOOT"
-msgstr "EL SISTEMA VA A REINICIAR"
+msgstr "SE VA A REINICIAR EL SISTEMA"
 
 
 msgid "INFOS"
-msgstr "INFOS"
+msgstr "INFO"
 
 msgid "VERSION"
-msgstr "VERSION"
+msgstr "VERSIÓN"
 
 msgid "STORAGE"
 msgstr "ALMACENAMIENTO"
@@ -292,4 +292,4 @@ msgid "SMOOTH GAMES"
 msgstr "JUEGOS SENCILLOS"
 
 msgid "I18NMESSAGECONTROLLERS"
-msgstr "YOU ARE GOING TO CONFIGURE A CONTROLLER. IF YOU HAVE ONLY ONE JOYSTICK, CONFIGURE THE DIRECTIONS KEYS AND SKIP JOYSTICK CONFIG BY HOLDING A BUTTON. IF YOU DO NOT HAVE A SPECIAL KEY FOR HOTKEY, CHOOSE THE SELECT BUTTON. SKIP ALL BUTTONS YOu DO NOT HAVE BY HOLDING A KEY."
+msgstr "ESTÁS A PUNTO DE CONFIGURAR UN MANDO. SI SOLO DISPONES DE UN JOYSTICK, CONFIGURA LAS TECLAS DE DIRECCIÓN Y OMITE LA CONFIGURACIÓN DEL JOYSTICK PULSANDO UN BOTÓN. SI NO DISPONES DE UNA TECLA ESPECIAL PARA HOTKEY, ELIGE EL BOTÓN SELECT. OMITE TODOS LOS BOTONES DE LOS QUE NO DISPONGAS MANTENIENDO PULSADA UNA TECLA."
